--- a/site/themes/mttt/sass/_root.scss
+++ b/site/themes/mttt/sass/_root.scss
@@ -28,10 +28,10 @@
   --head-color: #063656; // main brand color
   --head-dark-color: #031c2c;
 
-  --accent-color: #dfdddc; // <-- use it as theme color
-  --accent-dark-color: #bfbdbc;
-  --accent-darker-color:  #7f7d7c;
-  --accent-darkest-color:  #4f4d4c;
+  --accent-color: #e2e1e0; // <-- use it as theme color
+  --accent-dark-color: #cfcdcc;
+  --accent-darker-color:  #8f8d8c;
+  --accent-darkest-color:  #5f5d5c;
 
   --link-color: var(--head-color);
   --link-hl-color: #561606;
